# WSL2Manager

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py  wsl2manager-app-spec.md  wsl2manager-app.spec
src/wsl2manager_app/: config.py  main.py  tray.py
src/wsl2manager_app/wsl/: controller.py
