[project]
name = "wsl2manager-app"
version = "0.1.0"
description = "Background system-tray app to start, stop, reboot, and open terminals into WSL distros"
readme = "README.md"
authors = [
    { name = "Luiz Brunca", email = "luizhenriquebrunca@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pystray>=0.19.5",
    "pillow>=11.0.0",
    "pywin32>=308",
]

[project.scripts]
wsl2manager-app = "wsl2manager_app.main:main"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
